# retail-decision-engine

./: .gitignore  README.md  main.py  pyproject.toml  python generate_store_context.py
.agents/skills/: developing-with-streamlit
app/: app_customer.py  app_store_owner.py  data_loader.py
data/processed/: association_rules.parquet  department_reorder.parquet  peak_hours.parquet  reorder_products.parquet  store_owner_context.json
notebooks/: 01_data_understanding.ipynb  02_data_cleaning.ipynb  04_clustering.ipynb  05_reorder_rate_analysis.ipynb  market_basket_rules_model.ipynb
