[project]
name = "retail-decision-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "minsearch>=0.2.0",
    "mlxtend>=0.25.0",
    "numpy>=2.5.1",
    "openai>=2.46.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
